--- a/app/views/header.html
+++ b/app/views/header.html
@@ -12,8 +12,11 @@
     <script src="/public/js/bootstrap-3.3.6.min.js"></script>
 
     {{range .moreStyles}}
-    <link rel="stylesheet" type="text/css" href="/public/{{.}}"> {{end}}
-    <link rel="stylesheet" type="text/css" href="/public/css/gorum.css"> {{range .moreScripts}}
+    <link rel="stylesheet" type="text/css" href="/public/{{.}}">
+    {{end}}
+    <link rel="stylesheet" type="text/css" href="/public/css/gorum.css">
+    <link rel="stylesheet" href="/public/css/font-awesome.min.css">
+    {{range .moreScripts}}
     <script src="/public/{{.}}" type="text/javascript" charset="utf-8"></script>
     {{end}}
 </head>
@@ -113,7 +116,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Perfil</a></li>
+                                    <li><a href="{{ url "Users.Profile" }}">Perfil</a></li>
                                     <li><a href="#">Configuración</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href='{{ url "Accounts.Logout" }}'>Cerrar Sesión</a></li>
