--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,4 +1,4 @@
-{{template "flash.html" .}}
+ {{/* template "flash.html" . */}}
   {{if eq .RunMode "dev"}}
     {{template "debug.html" .}}
   {{end}}
