--- a/app/views/Accounts/Profile.html
+++ b/app/views/Accounts/Profile.html
@@ -15,22 +15,24 @@
 			<div class="media">
 				<div class="media-left">
 					<a href="#">
-					<img class="media-object" src="https://www.codeproject.com/KB/GDI-plus/ImageProcessing2/img.jpg" alt="...">
+					<!--img class="media-object" src="https://www.codeproject.com/KB/GDI-plus/ImageProcessing2/img.jpg" alt="..."-->
+					<img class="media-object" src="{{ .user.FileName }}" alt="...">
 					</a>
 				</div>
 				<div class="media-body">
 					<h4 class="media-heading">{{ .user.Username }}</h4>
 					<p>{{ .user.Bio }}</p>
+					{{ .user.FileName }}
 				</div>
 			</div>
 		</div>
 	</div>
-	</div>
+</div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-2 col-md-offset-1 left-menu">
-		<br>
-		<br>
+			<br>
+			<br>
 			<div class="btn-group">
 				<button class="btn btn-default" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="fa fa-rss" aria-hidden="true"></i> Publicaciones
