--- a/app/views/header.html
+++ b/app/views/header.html
@@ -19,10 +19,18 @@
     {{range .moreScripts}}
     <script src="/public/{{.}}" type="text/javascript" charset="utf-8"></script>
     {{end}}
+    <style>
+    	.flash-messages{
+    		margin-top: -20px;
+    		min-height: 20px;
+    	}
+    </style>
 </head>
 
 <body>
-
+	<div class="flash-messages">
+	{{template "flash.html" .}}
+	</div>
     {{ if not .user }}
     <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
@@ -117,7 +125,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="{{ url "Users.Profile" }}">Perfil</a></li>
-                                    <li><a href="#">Configuración</a></li>
+                                    <li><a href="{{ url "Users.Profile" }}">Configurations</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href='{{ url "Accounts.Logout" }}'>Cerrar Sesión</a></li>
                                 </ul>
