Profile page Home page render discussions View discussion page Discussion scrollspy

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#scroll-bar-right" data-offset="300">
 	<div class="flash-messages">
 	{{template "flash.html" .}}
 	</div>
