--- a/public/css/gorum.css
+++ b/public/css/gorum.css
@@ -207,3 +207,44 @@ body { padding-top: 70px; }
 	margin-bottom: 0px;
 	border-color: #0065A4;
 }
+
+
+.media .media-object{
+		border-radius: 50px !important;
+		width: 100px;
+		height: 100px;
+		border: 4px solid #fff
+	}
+	.form-change-avatar{
+		width: 100px;
+		height: 100px;
+		position: absolute;
+		margin-top: -100px;
+		border: 0;
+	}
+	.form-change-avatar .clickFileInput{
+		height: 90px;
+		width: 90px;
+		margin-left: 5px;
+		margin-top: 5px;
+		cursor: pointer;
+		border:0 !important;
+		border-radius: 50px;
+	}
+	.form-change-avatar:hover .clickFileInput{
+		background-color: #333;
+		opacity: 0.4;
+	}
+
+	.form-change-avatar .clickFileInput i{
+		margin-top: 40px;
+		font-size: 1.2em;
+		color: #FFF;
+		height: 90px;
+		width: 90px;
+		cursor: pointer;
+		border:0 !important;
+	}
+	.form-change-avatar .fileInput{
+		display: none;
+	}
