Fixes Fix css style Adding sidebar left for tags Show home page 25 discussions max Filters by tags or parent tags (discussions) Fix profile image user of discussions (Home page)

--- a/app/views/Discussions/Index.html
+++ b/app/views/Discussions/Index.html
@@ -50,8 +50,8 @@
 						</a>
 					</div>
 					<div class="media-body">
-						{{ .locale }}ss
-						<h4 class="media-heading">{{ .currentDiscussion.User.Username }}</h4> {{ timeago . .currentDiscussion.CreatedAt}}
+						<h4 class="media-heading">{{ .currentDiscussion.User.Username }}</h4>
+						{{ timeago .currentDiscussion.CreatedAt }}
 						<p>{{ markdown .currentDiscussion.Body }}</p>
 					</div>
 				</div>
