--- a/public/css/gorum.css
+++ b/public/css/gorum.css
@@ -83,7 +83,8 @@ body { padding-top: 70px; }
 
 .list-group-gorum .media-object{
 	width: 36px;
-	height: 36px
+	height: 36px;
+	border-radius: 18px;
 }
 
 .sort{
