Cambios de diseño

--- a/app/views/Users/Profile.html
+++ b/app/views/Users/Profile.html
@@ -17,15 +17,18 @@
 				</div>
 				<div class="media-body">
 					<h4 class="media-heading">{{ .user.Username }}</h4>
-					<p>{{ .user.Bio }}</p>
+
+			    <p>{{ .user.Bio }}</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+<div class="prueba">
+    <p>Suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi lacus! Blandit libero volutpat sed cras ornare arcu dui vivamus arcu felis, bibendum ut tristique et, egestas quis.</p>
+</div>
 <div class="container">
-	<div class="row">
-		<div class="col-md-2 col-md-offset-1 left-menu">
+	<div class="row">		<div class="col-md-2 col-md-offset-1 left-menu">
 			<br>
 			<br>
 			<div class="btn-group">
